21-GKE-Gateway-API/03-GKE-Gateway-API-Selfsigned-SSL-k8sSecrets/p2-regional-k8sresources-yaml/03-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: mygateway1-regional
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: myssl-secret    
  addresses:
  - type: NamedAddress
    value: my-regional-ip1


## Documentation ##
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.GatewayTLSConfig
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.SecretObjectReference
