21-GKE-Gateway-API/03-GKE-Gateway-API-Selfsigned-SSL-k8sSecrets/p2-regional-k8sresources-yaml/04-gateway-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: route-external-http
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-regional
  rules:
  - backendRefs:
    - name: myapp1-service
      port: 80
      weight: 100
